mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: parkit
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
