mongodb/total-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkit-total-ingress
  namespace: parkit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. 리액트 프론트엔드 (메인 화면)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
      # 2. 프로메테우스
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      # 3. 그라파나
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      # 4. 소켓 서버
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: socket-service
            port:
              number: 8082
      # 5. 레포트 서비스
      - path: /report
        pathType: Prefix
        backend:
          service:
            name: report-service
            port:
              number: 8083
